--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,9 +67,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i love you vs i love you: 1.0\n",
+      "i love you vs i adore you: 0.922\n",
+      "i love you vs i hate you: 0.844\n",
+      "i love you vs i despise you: 0.823\n",
+      "i love you vs peanut butter sandwich: 0.762\n",
+      "i love you vs i am ambivalent toward you: 0.802\n",
+      "i love you vs The happiness of your life depends upon the quality of your thoughts.: 0.765\n",
+      "i love you vs 你生活的幸福取决于你思想的质量。: 0.761\n",
+      " \n",
+      " \n",
+      "i hate you vs i love you: 0.844\n",
+      "i hate you vs i adore you: 0.839\n",
+      "i hate you vs i hate you: 1.0\n",
+      "i hate you vs i despise you: 0.938\n",
+      "i hate you vs peanut butter sandwich: 0.736\n",
+      "i hate you vs i am ambivalent toward you: 0.815\n",
+      "i hate you vs The happiness of your life depends upon the quality of your thoughts.: 0.72\n",
+      "i hate you vs 你生活的幸福取决于你思想的质量。: 0.728\n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n"
+     ]
+    }
+   ],
    "source": [
     "for name, embedding in embeddings:\n",
     "    for name2, embedding2 in embeddings:\n",
@@ -80,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,9 +128,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>embedding</th>\n",
+       "      <th>filename</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td># Senior Software Engineer Onboarding\\n\\n1. **...</td>\n",
+       "      <td>[[0.01337413303554058, -0.019107796251773834, ...</td>\n",
+       "      <td>documents/onboarding-senior-swe.md</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td># Junior Software Engineer Onboarding\\n\\n1. **...</td>\n",
+       "      <td>[[0.006828767247498035, -0.007097616326063871,...</td>\n",
+       "      <td>documents/onboarding-junior-swe.md</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td># Sales Account Executive Onboarding\\n\\n1. **C...</td>\n",
+       "      <td>[[-0.006810402497649193, -0.022385383024811745...</td>\n",
+       "      <td>documents/onboarding-ae.md</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td># Marketing Team Onboarding\\n\\n1. **Introducti...</td>\n",
+       "      <td>[[-0.015303810127079487, -0.021654633805155754...</td>\n",
+       "      <td>documents/onboading-marketing.md</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text  \\\n",
+       "0  # Senior Software Engineer Onboarding\\n\\n1. **...   \n",
+       "1  # Junior Software Engineer Onboarding\\n\\n1. **...   \n",
+       "2  # Sales Account Executive Onboarding\\n\\n1. **C...   \n",
+       "3  # Marketing Team Onboarding\\n\\n1. **Introducti...   \n",
+       "\n",
+       "                                           embedding  \\\n",
+       "0  [[0.01337413303554058, -0.019107796251773834, ...   \n",
+       "1  [[0.006828767247498035, -0.007097616326063871,...   \n",
+       "2  [[-0.006810402497649193, -0.022385383024811745...   \n",
+       "3  [[-0.015303810127079487, -0.021654633805155754...   \n",
+       "\n",
+       "                             filename  \n",
+       "0  documents/onboarding-senior-swe.md  \n",
+       "1  documents/onboarding-junior-swe.md  \n",
+       "2          documents/onboarding-ae.md  \n",
+       "3    documents/onboading-marketing.md  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "onboarding_docs_df = pd.DataFrame({\"text\": onboarding_doc_text, \"embedding\": embeddings, \"filename\": raw_onboarding_docs})\n",
     "onboarding_docs_df.head()"
@@ -107,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,16 +227,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Junior Software Engineer Onboarding\n",
+      "\n",
+      "1. **Introduction to the Team and Culture:**\n",
+      "   - Welcome the new engineer and introduce them to the team members with whom they'll be working closely.\n",
+      "   - Organize a meet-and-greet with key members of other departments to build interdepartmental relationships.\n",
+      "   - Provide an overview of the company's culture, values, and mission to instill a sense of belonging and purpose.\n",
+      "\n",
+      "2. **Setup of Tools and Environment:**\n",
+      "   - Ensure their workstation is fully set up with the necessary hardware and software.\n",
+      "   - Provide access to all required internal systems, including email, project management tools, code repositories, and documentation.\n",
+      "   - Guide them through the setup of development environments, including IDEs, databases, and local servers.\n",
+      "\n",
+      "3. **Codebase and Documentation Review:**\n",
+      "   - Walk them through the architecture of the main projects they will be working on.\n",
+      "   - Review the existing documentation, including code style guides, best practices, and contribution guidelines.\n",
+      "   - Assign reading and understanding of the current codebase as a task, starting with simple modules and gradually moving to more complex areas.\n",
+      "\n",
+      "4. **Training and Development:**\n",
+      "   - Create a personalized learning plan that includes internal training sessions, online courses, and reading materials relevant to their role.\n",
+      "   - Pair them with a mentor for regular check-ins and guidance.\n",
+      "   - Encourage participation in code reviews to familiarize them with the team's coding practices and standards.\n",
+      "\n",
+      "5. **Initial Assignments and Feedback:**\n",
+      "   - Start with small, manageable tasks that contribute to current projects, allowing them to get a quick sense of achievement.\n",
+      "   - Schedule regular one-on-one meetings to provide constructive feedback and discuss progress.\n",
+      "   - Set clear short-term goals and review these goals regularly to track development and adjust the learning path as necessary.\n"
+     ]
+    }
+   ],
    "source": [
     "print(get_nearest_neighbor_text(new_message, onboarding_docs_df))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,18 +292,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "As a new AE, there are several important steps you should take:\n",
+      "\n",
+      "1. Begin by participating in company orientation and product training. This will help you understand the company culture, mission, and values, as well as provide comprehensive knowledge about the products or services you will be selling. Make sure to grasp the unique value proposition compared to competitors.\n",
+      "\n",
+      "2. Familiarize yourself with the systems and tools you will be using. This includes training on CRM software, communication tools, and other technology platforms necessary for your role. Additionally, learn about the processes for tracking leads, managing customer interactions, and reporting sales activities.\n",
+      "\n",
+      "3. Review the sales process and methodologies. Understand the various stages of the sales process, such as prospecting, qualification, needs analysis, solution offering, handling objections, closing techniques, and post-sale service. Familiarize yourself with the preferred sales methodologies and strategies utilized by the company, such as SPIN Selling or Challenger Sales.\n",
+      "\n",
+      "4. Gain insights into the target market and customers you will be working with. Learn about industry trends, key players, and market analysis. Additionally, understand customer personas, buying patterns, and decision-making processes in detail.\n",
+      "\n",
+      "5. Seek mentorship and engage in role-playing exercises. Pair up with a mentor or experienced salesperson who can provide guidance and support as you navigate your new role. Engage in role-playing exercises to practice various sales scenarios, negotiation techniques, and objection handling.\n",
+      "\n",
+      "By following these steps, you will be well-equipped to kickstart your journey as a successful AE.\n"
+     ]
+    }
+   ],
    "source": [
     "help_me_onboard(\"I am a new AE. What should I do first?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After attending orientation and product training as a new Account Executive, there are several steps you can take to further prepare for your role:\n",
+      "\n",
+      "1. **Familiarize Yourself with Systems and Tools:** Learn how to use the CRM software, communication tools, and any other technology platforms that are necessary for your job. Understand how to track leads, manage customer interactions, and report sales activities.\n",
+      "\n",
+      "2. **Review the Sales Process and Methodologies:** Go over the sales process in detail, including prospecting, qualification, needs analysis, solution offering, objection handling, closing techniques, and post-sale service. Familiarize yourself with the preferred sales methodologies and strategies your company uses, such as SPIN Selling or Challenger Sales.\n",
+      "\n",
+      "3. **Gain Market and Customer Insights:** Dig deeper into your target market by researching industry trends, key players, and conducting market analysis. Understand your customer personas, including their buying patterns and decision-making processes. This knowledge will help you tailor your sales approach accordingly.\n",
+      "\n",
+      "4. **Seek Mentorship and Role-Playing Opportunities:** Connect with a mentor or an experienced salesperson who can provide guidance and support as you navigate your new role. Engage in role-playing exercises to practice various sales scenarios, negotiation techniques, and objection handling. This practical experience will enhance your confidence and effectiveness in real-life sales situations.\n",
+      "\n",
+      "By following these steps, you can continue to build your knowledge and skills as an Account Executive, setting yourself up for success in your new role.\n"
+     ]
+    }
+   ],
    "source": [
     "help_me_onboard(\"I am a new AE. I've attended orientation and prodcut training. What should I do next?\")"
    ]
